# rust

./: README.md
guessing_game/src/: Overview.code-workspace  main.rs
minigrep/: Cargo.toml
minigrep/src/: lib.rs  main.rs  output.txt  poem.txt
movie_app/: .gitignore  Cargo.toml  READ.me
movie_app/frontend/: app.js  index.html  style.css
movie_app/src/: main.rs  models.rs
server/: 404.html  index.html
server/src/: lib.rs  main.rs
